[tool.black]
line-length = 120

[tool.poetry]
name = "django-bulmaforms"
version = "0.1.0"
description = ""
authors = ["Tim Fechner <tim.fechner@mailbox.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "1.11"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
